# QT_webclient_gtest

./: .gitignore  CMakeLists.txt  main.cpp
0_Abstract/: IWindowApi.h
1_Concrete/: IWindowApi.cpp
2_Utility/: RestManager.cpp  RestManager.h
Google_tests/: CMakeLists.txt  test1.cpp
cmake-scripts/: windeployqt.cmake
